<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">FLCoS Real-time</string>
    <string name="capture">Capture</string>
    <string name="qrv1">QRv1</string>
    <string name="qrv2">QRv2</string>
    <string name="qrv3">QRv3</string>
    <string name="qrv4">QRv4</string>
    <string name="dm34">DM34</string>
    <string name="dm42">DM42</string>
    <string name="dm60">DM60</string>
    <string name="tx1">1 Tx</string>
    <string name="tx2">2 Tx</string>
    <string name="rs_data">40</string>
    <string name="rs_total">/64</string>
    <string name="capt_dec_time">Capture and decode time: </string>
    <string name="rs_time">Reed Solomon time: </string>
</resources>
