<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/code_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/qr_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/qr_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/qrv1" />

        <RadioButton
            android:id="@+id/qr_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/qrv2" />

        <RadioButton
            android:id="@+id/qr_v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/qrv3" />

        <RadioButton
            android:id="@+id/dm_34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/dm34" />

        <RadioButton
            android:id="@+id/dm_42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/dm42" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/n_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/tx_1"
        app:layout_constraintEnd_toStartOf="@+id/rs_data"
        app:layout_constraintStart_toEndOf="@+id/code_version"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/tx_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/tx1" />

        <RadioButton
            android:id="@+id/tx_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/tx2" />
    </RadioGroup>

    <EditText
        android:id="@+id/rs_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="2"
        android:inputType="numberDecimal"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/rs_data"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toStartOf="@+id/rs_total"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rs_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/rs_total"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/rs_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rs_data"
        app:layout_constraintVertical_bias="0.571" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/camera_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_version" />
</androidx.constraintlayout.widget.ConstraintLayout>